ks_items/ks_post_iptables_issaf
## configuration of iptables
if [[ -e /etc/sysconfig/iptables ]] ; then
    mv /etc/sysconfig/iptables /etc/sysconfig/iptables_ini_cfg
    mv /etc/sysconfig/ip6tables /etc/sysconfig/ip6tables_ini_cfg
fi

cat << EOF >> /etc/sysconfig/iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT

# DEFAULT ACCEPTS
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# REMOVE INVALID FLAGS COMBINATIONS
-A INPUT -m conntrack --ctstate INVALID -j DROP

## WHITELISTING - first accept all what was specified to be accepted

# DEFAULT ACCEPT ALL LOCAL SSH - MANAGEMENT
-A INPUT -m tcp -p tcp -m multiport --dports 22,60000 -j ACCEPT --source 85.120.46.0/24,46.243.114.128/25,10.99.99.0/24

# ACCEPT ALL ICMP
-A INPUT -p icmp -j ACCEPT

COMMIT
EOF

cat << EOF >> /etc/sysconfig/ip6tables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -i lo -j ACCEPT

# DEFAULT ACCEPTS
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# REMOVE INVALID FLAGS COMBINATIONS
-A INPUT -m conntrack --ctstate INVALID -j DROP

## WHITELISTING - first accept all what was specified to be accepted

# DEFAULT ACCEPT ALL LOCAL SSH - MANAGEMENT
-A INPUT -m tcp -p tcp -m multiport --dports 22,60000 -j ACCEPT --source 2001:b30:4210::/48

# ACCEPT ALL ICMP
-A INPUT -p ipv6-icmp -j ACCEPT

COMMIT
EOF

systemctl disable firewalld
yum -y remove firewalld*
systemctl enable --now iptables ip6tables

#######################################
##  ADD sysctl mtu settings

cat << EOF >> /etc/sysctl.d/70-mtu.conf

# this would enable automatic MTU discovery (if local MTU >=9000)
# https://www.kernel.org/doc/Documentation/networking/ip-sysctl.txt
# https://github.com/leandromoreira/linux-network-performance-parameters

# https://sysctl-explorer.net/net/ipv4/ip_no_pmtu_disc/ ; Default = false
# net.ipv4.ip_no_pmtu_disc = 0

# https://sysctl-explorer.net/net/ipv4/ip_forward_use_pmtu/
# this would enable automatic MTU discovery (if local MTU >=9000) ; default = 0
net.ipv4.ip_forward_use_pmtu = 0

# https://sysctl-explorer.net/net/ipv4/tcp_mtu_probing/
# Controls TCP Packetization-Layer Path MTU Discovery.  Takes three values:
#      0 - Disabled
#      1 - Disabled by default, enabled when an ICMP black hole detected
#      2 - Always enabled, use initial MSS of tcp_base_mss.
net.ipv4.tcp_mtu_probing = 2

# https://sysctl-explorer.net/net/ipv4/tcp_probe_interval/
# Controls how often to start TCP Packetization-Layer Path MTU Discovery reprobe. The default is reprobing every 10 minutes as per RFC4821.
# net.ipv4.tcp_probe_interval = 600

# https://sysctl-explorer.net/net/ipv4/tcp_probe_threshold/
# Controls when TCP Packetization-Layer Path MTU Discovery probing will stop in respect to the width of search range in bytes. Default is 8 bytes
# net.ipv4.tcp_probe_threshold = 8

# https://sysctl-explorer.net/net/ipv6/mtu
net.ipv6.conf.all.mtu = 9000
net.ipv6.conf.default.mtu = 9000

# https://sysctl-explorer.net/net/ipv4/min_pmtu/
# minimum discovered Path MTU
net.ipv4.route.min_pmtu = 1260

##########################
### MSS MTU RELATION   ###
# MSS < MTU
# MSS = MTU - TCPHdrLen - IPHdrLen
# IPv4 : MSS = 1500 - 20 - 20 = 1460
# IPv6 : MSS = 1500 - 40 - 20 = 1440

# https://sysctl-explorer.net/net/ipv4/tcp_base_mss/
# The initial value of search_low to be used by the packetization layer Path MTU discovery (MTU probing).
# If MTU probing is enabled, this is the initial MSS used by the connection.
net.ipv4.tcp_base_mss = 1220

# If MTU probing is enabled this caps the minimum MSS used for search_low for the connection
net.ipv4.tcp_mtu_probe_floor = 1220

# https://sysctl-explorer.net/net/ipv4/min_adv_mss/
# The advertised MSS depends on the first hop route MTU, but will never be lower than this setting.
net.ipv4.route.min_adv_mss = 1220
net.ipv6.route.min_adv_mss = 1220

# https://sysctl-explorer.net/net/ipv4/mtu_expires/
# Time, in seconds, that cached PMTU information is kept
net.ipv4.route.mtu_expires = 900
net.ipv6.route.mtu_expires = 900

# https://sysctl-explorer.net/net/ipv6/accept_ra_mtu/
# Apply the MTU value specified in RA option 5 (RFC4861). If disabled, the MTU specified in the RA will be ignored.
# Functional default: enabled if accept_ra is enabled. disabled if accept_ra is disabled.
net.ipv6.conf.all.accept_ra_mtu = 0
net.ipv6.conf.default.accept_ra_mtu = 0

EOF
